--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,10 @@
 	padding: 0;
 }
 
+html {
+	scroll-padding-top: 138px;
+}
+
 body {
 	font-family: 'Montserrat', serif;
 	font-optical-sizing: auto;
@@ -20,9 +24,22 @@ body {
 	background-color: rgba(0, 0, 0, 0.9);
 }
 
+.section-title {
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.underline {
+	margin: 0 auto 40px;
+	height: 5px;
+	width: 90px;
+	border-radius: 20px;
+	background-color: $main-color;
+}
+
 nav {
 	text-transform: uppercase;
-	transition: all 0.6s ease-in-out;
+	transition: background-color 0.6s ease-in-out;
 	z-index: 2;
 
 	.navbar-toggler {
@@ -50,7 +67,7 @@ nav {
 			width: 150px;
 		}
 
-		transition: all 0.3s ease-in-out;
+		transition: box-shadow 0.3s ease-in-out;
 	}
 
 	.navbar-brand:hover {
@@ -229,6 +246,60 @@ header.hero-video {
 	}
 }
 
+.aboutus {
+	i {
+		margin-top: 20px;
+		font-size: 30px;
+	}
+
+	.aboutus-card-title {
+		font-size: 18px;
+		text-transform: uppercase;
+	}
+
+	.aboutus-card-text {
+		font-size: 14px;
+	}
+
+	.aboutus-hover {
+		transition: color 0.3s;
+	}
+
+	.aboutus-hover:hover {
+		color: $main-color;
+	}
+}
+
+.aboutus-hero {
+	position: relative;
+	background-image: url('../assets/platform-small.jpg');
+	background-size: cover;
+	background-position: center;
+	color: $light-gray;
+	z-index: 0;
+
+	.aboutus-shadow {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.7);
+		z-index: -1;
+	}
+	.aboutus-hero-item {
+		margin: 10px 0;
+
+		i {
+			font-size: 40px;
+		}
+
+		.aboutus-hero-title {
+			font-size: 24px;
+		}
+	}
+}
+
 @media (min-width: 768px) {
 	.hero-text {
 		h1 {
@@ -244,6 +315,15 @@ header.hero-video {
 				width: 200px;
 			}
 		}
+	}
+}
+
+@media (min-width: 992px) {
+	html {
+		scroll-padding-top: 176px;
+	}
+	.aboutus-hero {
+		background-image: url('../assets/platform-big.jpg');
 	}
 }
 
