added section prices

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,3 +1,7 @@
 $main-color: #039dff;
+$bg-color: #ebecf2;
 $white-color: #fff;
 $light-gray: #ddd;
+$dark-gray: #212529;
+$price-color: #102770;
+$link-date-color: #ffeba7;
