--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@ html {
 body {
 	font-family: 'Montserrat', serif;
 	font-optical-sizing: auto;
-	background-color: #333;
+	background-color: $bg-color;
 }
 
 .blue-text {
@@ -299,11 +299,13 @@ header.hero-video {
 		}
 	}
 }
+
 @mixin img-properties($height) {
 	height: $height;
 	object-fit: cover;
 	object-position: 55% 45%;
 }
+
 .pc-gaming-haven {
 	.card-body {
 		text-align: center;
@@ -318,9 +320,14 @@ header.hero-video {
 		}
 	}
 	.carousel-item {
+		transition: opacity 1.5s ease-in-out;
+		opacity: 0;
 		img {
 			@include img-properties(600px);
 		}
+	}
+	.carousel-item.active {
+		opacity: 1;
 	}
 	.carousel-caption {
 		left: 0;
@@ -355,6 +362,170 @@ header.hero-video {
 	}
 }
 
+.prices {
+	.price-box {
+		position: relative;
+		margin: 20px;
+		padding: 30px;
+		padding-top: 200px;
+		font-family: 'Poppins', sans-serif;
+		background-color: $white-color;
+		box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+		transition: transform 0.3s ease-in-out;
+		z-index: 1;
+
+		.price-list li:first-of-type {
+			font-size: 24px;
+		}
+		.price-list li {
+			font-size: 18px;
+			font-weight: 500;
+			letter-spacing: 1px;
+			line-height: 1.3;
+			color: $price-color;
+		}
+		p {
+			color: $dark-gray;
+		}
+	}
+
+	.price-box:hover {
+		transform: scale(1.05);
+	}
+
+	.price-box h4 {
+		position: relative;
+		width: 100%;
+		display: block;
+		text-align: center;
+		font-weight: 700;
+		letter-spacing: 3px;
+		font-size: 22px;
+		line-height: 1.7;
+		color: $price-color;
+	}
+
+	.price-box h4:before {
+		position: absolute;
+		content: '';
+		z-index: -1;
+		background: linear-gradient(217deg, #448ad5, #b8eaf9);
+		width: 70px;
+		height: 70px;
+		display: block;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		box-shadow: 0 6px 20px 0 rgba(16, 39, 112, 0.3);
+		animation: border-transform 6s linear infinite;
+	}
+
+	.ps-item h4:before {
+		background: linear-gradient(217deg, #648946, #a3c984);
+	}
+
+	.xbox-item h4:before {
+		background: linear-gradient(217deg, #d5b827, #fbff85);
+	}
+
+	@keyframes border-transform {
+		0%,
+		100% {
+			border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;
+		}
+		14% {
+			border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%;
+		}
+		28% {
+			border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%;
+		}
+		42% {
+			border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%;
+		}
+		56% {
+			border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%;
+		}
+		70% {
+			border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%;
+		}
+		84% {
+			border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%;
+		}
+	}
+
+	.link {
+		position: relative;
+		padding: 10px 20px;
+		border-radius: 4px;
+		display: inline-block;
+		text-align: center;
+		color: $link-date-color;
+		background-color: $price-color;
+		transition: all 200ms linear;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 1.2;
+		letter-spacing: 1px;
+		text-decoration: none;
+		transition: background-color 0.3s ease-in-out;
+	}
+
+	.link:hover {
+		color: $price-color;
+		background-color: $link-date-color;
+	}
+
+	.img-wrap img {
+		width: 100%;
+		height: auto;
+		display: block;
+	}
+	.img-pc {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 165px;
+		mask-image: linear-gradient(to bottom, white 85%, transparent 100%),
+			repeating-linear-gradient(
+				45deg,
+				rgba(200, 200, 200, 0.5),
+				rgba(200, 200, 200, 0.5) 15px,
+				transparent 15px,
+				transparent 30px
+			);
+	}
+	.img-ps {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: auto;
+		transform: rotateX(180deg);
+		z-index: -1;
+	}
+	.img-xbox {
+		position: absolute;
+		left: 20px;
+		top: -50px;
+		width: 90%;
+	}
+
+	.price-info {
+		a {
+			text-decoration: none;
+		}
+	}
+}
+@media (min-width: 410px) {
+	.prices {
+		.img-xbox {
+			left: 30px;
+			top: -150px;
+			width: 90%;
+		}
+	}
+}
 @media (min-width: 768px) {
 	.hero-text {
 		h1 {
@@ -371,6 +542,12 @@ header.hero-video {
 			}
 		}
 	}
+	.prices {
+		.img-xbox {
+			left: 20px;
+			top: -90px;
+		}
+	}
 }
 
 @media (min-width: 992px) {
@@ -380,11 +557,22 @@ header.hero-video {
 	.aboutus-hero {
 		background-image: url('../assets/platform-big.jpg');
 	}
+	.prices {
+		.img-xbox {
+			top: -125px;
+		}
+	}
 }
 
 @media (min-width: 1200px) {
 	header.hero-img {
 		background-image: url('../assets/hero-big.jpg');
+	}
+
+	.prices {
+		.img-xbox {
+			top: -90px;
+		}
 	}
 }
 
