added section achievements

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -2,6 +2,7 @@ $main-color: #039dff;
 $bg-color: #ebecf2;
 $white-color: #fff;
 $light-gray: #ddd;
+$gray-color: #424242;
 $dark-gray: #212529;
 $price-color: #102770;
 $link-date-color: #ffeba7;
