added reservation function for pricing cards

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -5,4 +5,4 @@ $light-gray: #ddd;
 $gray-color: #424242;
 $dark-gray: #212529;
 $price-color: #102770;
-$link-date-color: #ffeba7;
+$btn-date-color: #ffeba7;
