--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,15 @@ body {
 	background-color: $bg-color;
 }
 
+@font-face {
+	font-family: 'Tabler Icons';
+	src: url('https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/fonts/tabler-icons.woff2?v3.34.0')
+		format('woff2');
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
+}
+
 .blue-text {
 	color: $main-color;
 }
